<resources>
    <string name="app_name">RunTime</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Log in</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <string name="tv_distance">Distance:</string>
    <string name="tv_duration">Duration:</string>
    <string name="tv_pace">Pace:</string>

    <string name="btn_run_start">Start</string>
    <string name="btn_run_pause">Pause Stop</string>
    <string name="btn_run_stop">Stop</string>

    <string name="save_record_title">Save Record</string>
    <string name="save_record_msg">Would you like to save this record?</string>
    <string name="btn_save">Save</string>
    <string name="btn_discard">Discard</string>

    <string name="btn_music_play">Play</string>
    <string name="btn_music_pause">Pause</string>
    <string name="btn_music_next">Next</string>
    <string name="btn_music_previous">Previous</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_weather">WeatherActivity</string>
    <string name="nav_run">Run</string>
    <string name="nav_map">Map</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_history">History</string>

    <string name="tv_weather">Weather:</string>
    <string name="tv_temperature">Temperature:</string>
    <string name="tv_precipitation">Precipitation:</string>
    <string name="tv_humidity">Humidity:</string>
    <string name="tv_wind">Wind:</string>

    <string name="tv_title_month_history">Month History</string>
    <string name="tv_title_distance">Distance:</string>
    <string name="tv_title_duration">Duration:</string>
    <string name="tv_title_pace">Pace:</string>
    <string name="tv_title_month_distance">Total Distance:</string>
    <string name="tv_title_month_duration">Total Duration:</string>
    <string name="tv_title_month_pace">Avg Pace:</string>

    <string name="dialog_delete_title">Delete Record</string>
    <string name="dialog_delete_msg">Do you want to delete this record?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
