<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sydney.edu.au.runningdiary.activity.WeatherActivity">

    <TableLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weather"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv__label_weather"
                android:text="@string/tv_weather"
                android:padding="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_weather"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv__label_temperature"
                android:text="@string/tv_temperature"
                android:padding="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_temperature"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv__label_precipitation"
                android:text="@string/tv_precipitation"
                android:padding="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_precipitation"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv__label_humidity"
                android:text="@string/tv_humidity"
                android:padding="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_humidity"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv__label_wind"
                android:text="@string/tv_wind"
                android:padding="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_wind"/>
        </TableRow>

    </TableLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
