<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:background="@color/btnPrimaryOrange"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_login"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btn_register"
                    style="?android:textAppearanceSmall"
                    android:background="@color/btnPrimaryOrange"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/btn_login"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_register"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
