<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true"
    android:layout_marginTop="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/tl_stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control_run"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_hms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="TIME"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="80sp"/>

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="KILOMETERS"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_km_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/tv_pace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="KM/H"
            android:maxLines="1"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/control_run"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_above="@+id/control_music"
        android:gravity="center">

        <Button
            android:id="@+id/btn_run_start"
            android:background="@drawable/bgd_btns_run"
            android:layout_alignParentTop="true"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btn_run_start"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_run_pause_stop"
            android:background="@drawable/bgd_btns_run"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/btn_run_pause"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/control_music"
        android:background="@drawable/bgd_section"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/btn_music_logo"
            android:src="@mipmap/ic_headset_black_18dp"
            android:tint="@android:color/holo_orange_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/btn_music_play"
            android:src="@mipmap/ic_play_arrow_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/btn_music_play"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/btn_music_pause"
            android:src="@mipmap/ic_pause_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/btn_music_pause"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/btn_music_next"
            android:src="@mipmap/ic_fast_forward_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="75dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_music_next"/>

        <ImageButton
            android:id="@+id/btn_music_previous"
            android:src="@mipmap/ic_fast_rewind_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="75dp"
            android:background="@android:color/transparent"
            android:text="@string/btn_music_previous"/>

    </RelativeLayout>

</RelativeLayout>